[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx-video"
version = "0.1.0"
description = "A package for LTX-Video model"
authors = [
    { name = "Sapir Weissbuch", email = "sapir@lightricks.com" }
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "torch>=2.1.0",
    "diffusers~=0.28.2",
    "transformers~=4.44.2",
    "sentencepiece~=0.1.96",
    "huggingface-hub~=0.25.2",
    "einops"
]

[project.optional-dependencies]
# Instead of thinking of them as optional, think of them as specific modes
inference-script = [
    "accelerate",
    "matplotlib",
    "imageio[ffmpeg]"
]
